2010-11-01  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15824: Speaking URL path segment does not work
	* Improve performance of expire time deletions

2010-10-19  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15768: make number of results per page in the redirects view configurable

2010-09-16  Dmitry Dulepov  <dmitry@typo3.org>

	* Released version 1.10.0

2010-09-15  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15708: No separate configuration possible if only port differs
	* Fixed problem: decoding of path override did not work for non-default language
	* Fixed problem: encoding of path override did not work for links with default language on localized pages
	* Fixed bug #15643: Not compatible with new Shortcude mode "Parent page" (thanks to Steffen Gebert)
	* Fixed bug #15654: RealURLs with no spaceCharacter
	* Updated code for #15665: remove references in hook parameters, use return values (thanks to Ingo Renner)

2010-09-09  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15665: Method to manually set the host during URL encoding
	* Fixed bug #15602: key is too long
	* Added database fields for overriding path segment completely
	* Fixed bug #15665: Method to manually set the host during URL encoding
	* Fixed bug #15602: key is too long
	* Added resolving of back path to id (initial version)

2010-09-08  Dmitry Dulepov  <dmitry@typo3.org>

	* Refactoring modfunc1/index.php
	* Refactor redirect view and add search to it
	* Added a page browser to the redirect view

2010-08-31  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed forge issue #9285: t3blog problems with RealURL when using file names
	* Updated copyright information
	* Removed unused modules

2010-08-30  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #14780: Resolving incorrect id when only language-preVar gets passed (thanks to Bernhard Kraft)
	* Fixed bug #15481: Visibility of tx_realurl_advanced::encodeTitle()